--- a/freight.html
+++ b/freight.html
@@ -1,1 +1,146 @@
-<script type="application/ld+json">{"@context":"https://schema.org","@graph":[{"@type":"WebPage","@id":"https://www.power2ship.com/heavy-haul/services-freight-shipping#webPage","url":"https://www.power2ship.com/heavy-haul/services-freight-shipping","name":"Freight Shipping","image":"https://www.power2ship.com/heavy-haul/services-freight-shipping#image","isPartOf":{"@type":"WebSite","@id":"https://www.power2ship.com#website","url":"https://www.power2ship.com","name":"Power2Ship"}},{"@type":"BreadcrumbList","@id":"https://www.power2ship.com/heavy-haul/services-freight-shipping#breadcrumbList","url":"https://www.power2ship.com/heavy-haul/services-freight-shipping","name":"Freight Shipping","itemListElement":[{"@type":"ListItem","@id":"https://www.power2ship.com/heavy-haul#listItem","position":1,"name":"Transporting Heavy Equipment","item":"https://www.power2ship.com/heavy-haul"},{"@type":"ListItem","@id":"https://www.power2ship.com/heavy-haul/services-freight-shipping#listItem","position":2,"name":"Freight Shipping","item":"https://www.power2ship.com/heavy-haul/services-freight-shipping"}]},{"@type":"Organization","@id":"https://www.power2ship.com#organization","url":"https://www.power2ship.com","name":"Power2Ship","logo":"https://www.power2ship.com#logo"},{"@type":"Brand","@id":"https://www.power2ship.com#brand","url":"https://www.power2ship.com","name":"Power2Ship"},{"@type":"LocalBusiness","@id":"https://www.power2ship.com#localBusiness","url":"https://www.power2ship.com","name":"Power2Ship","image":"https://www.power2ship.com#logo","priceRange":"$$$","telephone":"800-800-0718"},{"@type":"ImageObject","@id":"https://www.power2ship.com#logo","url":"https://www.power2ship.com/assets/front/images/power2ship-logo.png","contentUrl":"https://www.power2ship.com/assets/front/images/power2ship-logo.png","name":"Power2Ship Logo","caption":"Power2Ship Logo","representativeOfPage":true,"creator":{"@type":"Organization","@id":"https://www.power2ship.com#organization","url":"https://www.power2ship.com","name":"Power2Ship"}},{"@type":"ImageObject","@id":"https://www.power2ship.com/heavy-haul/services-freight-shipping#image","url":"https://www.power2ship.com/assets/front/images/1-freightShipping.jpg","contentUrl":"https://www.power2ship.com/assets/front/images/1-freightShipping.jpg","name":"Freight Shipping Image","caption":"Freight Shipping Image","representativeOfPage":true,"creator":{"@type":"Organization","@id":"https://www.power2ship.com#organization","url":"https://www.power2ship.com","name":"Power2Ship"}},{"@type":"Product","@id":"https://www.power2ship.com/heavy-haul/services-freight-shipping#product","url":"https://www.power2ship.com/heavy-haul/services-freight-shipping","name":"Freight Shipping","description":"Have freight to ship? Power2Ship is the best way to ship freight across the US. Get a quote now!","image":"https://www.power2ship.com/heavy-haul/services-freight-shipping#image","brand":"https://www.power2ship.com#brand","offers":{"@type":"Offer","@id":"https://www.power2ship.com/heavy-haul/services-freight-shipping#offer","url":"https://www.power2ship.com/heavy-haul/services-freight-shipping","name":"Freight Shipping","price":1000,"priceCurrency":"USD","availability":"https://schema.org/InStock","shippingDetails":{"@type":"OfferShippingDetails","shippingDestination":{"@type":"DefinedRegion","addressCountry":"US"},"deliveryTime":{"@type":"ShippingDeliveryTime","transitTime":{"@type":"QuantitativeValue","minValue":"3","maxValue":"10","unitCode":"DAY"}}}},"aggregateRating":{"@type":"AggregateRating","@id":"https://www.power2ship.com/heavy-haul/services-freight-shipping#aggregateRating","ratingCount":"149","ratingValue":"4.6"}},{"@type":"Service","@id":"https://www.power2ship.com/heavy-haul/services-freight-shipping#service","url":"https://www.power2ship.com/heavy-haul/services-freight-shipping","name":"Freight Shipping","image":"https://www.power2ship.com/heavy-haul/services-freight-shipping#image"},{"@type":"ContactPoint","@id":"https://www.power2ship.com/heavy-haul/services-freight-shipping#contactPoint","name":"Contact Power2Ship"}]}</script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "WebPage",
+      "@id": "https://www.power2ship.com/heavy-haul/services-freight-shipping#webPage",
+      "url": "https://www.power2ship.com/heavy-haul/services-freight-shipping",
+      "name": "Freight Shipping",
+      "image": "https://www.power2ship.com/heavy-haul/services-freight-shipping#image",
+      "isPartOf": {
+        "@type": "WebSite",
+        "@id": "https://www.power2ship.com#website",
+        "url": "https://www.power2ship.com",
+        "name": "Power2Ship"
+      }
+    },
+    {
+      "@type": "BreadcrumbList",
+      "@id": "https://www.power2ship.com/heavy-haul/services-freight-shipping#breadcrumbList",
+      "url": "https://www.power2ship.com/heavy-haul/services-freight-shipping",
+      "name": "Freight Shipping",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "@id": "https://www.power2ship.com/heavy-haul#listItem",
+          "position": 1,
+          "name": "Transporting Heavy Equipment",
+          "item": "https://www.power2ship.com/heavy-haul"
+        },
+        {
+          "@type": "ListItem",
+          "@id": "https://www.power2ship.com/heavy-haul/services-freight-shipping#listItem",
+          "position": 2,
+          "name": "Freight Shipping",
+          "item": "https://www.power2ship.com/heavy-haul/services-freight-shipping"
+        }
+      ]
+    },
+    {
+      "@type": "Organization",
+      "@id": "https://www.power2ship.com#organization",
+      "url": "https://www.power2ship.com",
+      "name": "Power2Ship",
+      "logo": "https://www.power2ship.com#logo"
+    },
+    {
+      "@type": "Brand",
+      "@id": "https://www.power2ship.com#brand",
+      "url": "https://www.power2ship.com",
+      "name": "Power2Ship"
+    },
+    {
+      "@type": "LocalBusiness",
+      "@id": "https://www.power2ship.com#localBusiness",
+      "url": "https://www.power2ship.com",
+      "name": "Power2Ship",
+      "image": "https://www.power2ship.com#logo",
+      "priceRange": "$$$",
+      "telephone": "800-800-0718"
+    },
+    {
+      "@type": "ImageObject",
+      "@id": "https://www.power2ship.com#logo",
+      "url": "https://www.power2ship.com/assets/front/images/power2ship-logo.png",
+      "contentUrl": "https://www.power2ship.com/assets/front/images/power2ship-logo.png",
+      "name": "Power2Ship Logo",
+      "caption": "Power2Ship Logo",
+      "representativeOfPage": true,
+      "creator": {
+        "@type": "Organization",
+        "@id": "https://www.power2ship.com#organization",
+        "url": "https://www.power2ship.com",
+        "name": "Power2Ship"
+      }
+    },
+    {
+      "@type": "ImageObject",
+      "@id": "https://www.power2ship.com/heavy-haul/services-freight-shipping#image",
+      "url": "https://www.power2ship.com/assets/front/images/1-freightShipping.jpg",
+      "contentUrl": "https://www.power2ship.com/assets/front/images/1-freightShipping.jpg",
+      "name": "Freight Shipping Image",
+      "caption": "Freight Shipping Image",
+      "representativeOfPage": true,
+      "creator": {
+        "@type": "Organization",
+        "@id": "https://www.power2ship.com#organization",
+        "url": "https://www.power2ship.com",
+        "name": "Power2Ship"
+      }
+    },
+    {
+      "@type": "Product",
+      "@id": "https://www.power2ship.com/heavy-haul/services-freight-shipping#product",
+      "url": "https://www.power2ship.com/heavy-haul/services-freight-shipping",
+      "name": "Freight Shipping",
+      "description": "Have freight to ship? Power2Ship is the best way to ship freight across the US. Get a quote now!",
+      "image": "https://www.power2ship.com/heavy-haul/services-freight-shipping#image",
+      "brand": "https://www.power2ship.com#brand",
+      "offers": {
+        "@type": "Offer",
+        "@id": "https://www.power2ship.com/heavy-haul/services-freight-shipping#offer",
+        "url": "https://www.power2ship.com/heavy-haul/services-freight-shipping",
+        "name": "Freight Shipping",
+        "price": 1000,
+        "priceCurrency": "USD",
+        "availability": "https://schema.org/InStock",
+        "shippingDetails": {
+          "@type": "OfferShippingDetails",
+          "shippingDestination": {
+            "@type": "DefinedRegion",
+            "addressCountry": "US"
+          },
+          "deliveryTime": {
+            "@type": "ShippingDeliveryTime",
+            "transitTime": {
+              "@type": "QuantitativeValue",
+              "minValue": "3",
+              "maxValue": "10",
+              "unitCode": "DAY"
+            }
+          }
+        }
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "@id": "https://www.power2ship.com/heavy-haul/services-freight-shipping#aggregateRating",
+        "ratingCount": "149",
+        "ratingValue": "4.6"
+      }
+    },
+    {
+      "@type": "Service",
+      "@id": "https://www.power2ship.com/heavy-haul/services-freight-shipping#service",
+      "url": "https://www.power2ship.com/heavy-haul/services-freight-shipping",
+      "name": "Freight Shipping",
+      "image": "https://www.power2ship.com/heavy-haul/services-freight-shipping#image"
+    },
+    {
+      "@type": "ContactPoint",
+      "@id": "https://www.power2ship.com/heavy-haul/services-freight-shipping#contactPoint",
+      "name": "Contact Power2Ship"
+    }
+  ]
+}
+</script>
